2022-11-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.h (snprintf): For MSVC older than 2015, fall back
	to using sprintf for the moment.

	* coders/msl.c (ProcessMSLScript): Handle parser creation failure.

	* coders/meta.c (GetIPTCStream): Assure that offset is initialized.

	* magick/floats.c (_Gm_convert_fp32_to_fp16): Fix Clang Analyzer
	complaints.

	* magick/xwindow.c (MagickXGetWindowColor): Assure that crop_info
	is initialized.

	* Makefile.am (scan-build): Added a scan-build target to help run
	Clang Analyzer.

	* coders/locale.c (WriteLOCALEImage): Fix Clang Analyzer
	complaints.

	* ALL: Replace strcpy() with strlcpy(), replace strcat() with
	strlcat(), replace sprintf() with snprintf().  Prefer using
	bounded string functions.

2022-11-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadOnePNGImage): Change ping_file_depth to
	unsigned and add verifications for ping_bit_depth.

2022-11-09 Fojtik Jaroslav  <JaFojtik@yandex.com>

        * coders/fits.c Store multiple scenes into one file.

2022-11-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadOnePNGImage): More work on Coverity issue 381864.

	* magick/image-private.h (MaxValueGivenBits): Move to private header.

	* coders/xpm.c (ReadXPMImage): More work on Coverity issue 381862
	"(DEADCODE)".

	* magick/operator.c (QuantumLogCB): Fix Coverity issue 381861
	"Control flow issues (DEADCODE)".

	* coders/xpm.c (ReadXPMImage): Fix Coverity issue 381862
	"(DEADCODE)".

	* magick/operator.c (QuantumGammaCB): Fix Coverity issue 381863
	"Control flow issues (DEADCODE)".

	* coders/png.c (ReadOnePNGImage): Fix Coverity issue 381864
	"BAD_SHIFT".

	* magick/operator.c (QuantumDepthCB): Fix Coverity issue 381867
	"Control flow issues (DEADCODE)".
	(QuantumPowCB): Fix Coverity issue 381865 "Control flow issues
	(DEADCODE)".

	* magick/import.c (ImportViewPixelArea): Fix Coverity issue 381868
	"Control flow issues (DEADCODE)".
